@@ -60,6 +60,7 @@ typedef enum {
     M_VCV,        /* parameter covariance matrix */
     M_RHO,        /* autoregressive coefficients */
     M_OLDMAT_MAX, /* -- separator -- */
+    M_COMPAN,     /* VAR companion matrix */
     M_JALPHA,     /* Johansen's alpha */
     M_JBETA,      /* Johansen's beta */
     M_JVBETA,     /* Covariance matrix for Johansen's normalized beta */
